# multistochgrad

./: .gitignore  Cargo.toml  README.md
examples/: logistic_regression.rs  mnist_logistic.rs  mnist_logistic_sag.rs  mnist_logistic_scsg.rs  mnist_logistic_svrg.rs
src/: applis.rs  lib.rs  libext.rs  logistic_regression.rs  mnist.rs  monitor.rs  prelude.rs  sag.rs  scsg.rs  svrg.rs  types.rs
src/applis/: linear_regression.rs  logistic_regression.rs
tests/: line_fit_sag.rs  line_fit_scsg.rs  line_fit_svrg.rs  line_fitting.rs
