[package]
name = "multistochgrad"
version = "0.1.5"
authors = ["jeanpierre.both@gmail.com"]
description = "Stochastic Gradient, Multithreaded"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["algorithms", "optimization", "stochastic"]
repository = "https://github.com/jean-pierreBoth/multistochgrad"
documentation = "https://docs.rs/multistochgrad"
edition= "2021"

[features]

# declare a feature with no dependancy to get some modulated debug print
# to be run with cargo build --features verbose_1
#verbose_1 = [ ]

[profile.release]
lto = true
opt-level = 3

[lib]
# cargo rustc --lib -- --crate-type dylib [or staticlib] or rlib (default)
# if we want to avoid specifying in advance crate-type 
lib = "multistochgrad"
path = "src/lib.rs"
test=true
#crate-type = ["dylib"]
doc=true



[[examples]]
name = "mnist_logistic_scsg"
path = "examples/mnist_logistic_scsg.rs"


[[examples]]
name = "mnist_logistic_svrg"
path = "examples/mnist_logistic_svrg.rs"


[[examples]]
name = "mnist_logistic_sag"
path = "examples/mnist_logistic_sag.rs"

[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#

# numerics

# infrastructure

# for //
rayon = {version = "1.8",  doc = false}

num_cpus = {version = "1.8.0", doc = false}

cpu-time = {version = "1.0", doc = false}
time = {version = "0.3",  doc = false}

ndarray = {version = "0.15", doc = false, features=["rayon"]}


rand = {version = "0.8", doc = false}
rand_distr = {version = "0.4", doc = false}
rand_xoshiro = {version = "0.6", doc = false}
lazy_static = { version = "1.4", doc = false}
# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
log = { version = "0.4"}
env_logger = { version = "0.11"}



